Pending changes in the mainline
===============================

General
-------

* Added support for RGBA64 images in tools/create-dicom and /preview

Bug Fixes
---------

* Fix the "Never" option of the "StorageAccessOnFind" that was sill accessing
  files (bug introduced in 1.11.0).


Maintenance
-----------

* DelayedDeletion plugin: Fix leaking of symbols
* SQLite now closes and deletes WAL and SHM files on exit.  This should improve
  handling of SQLite DB over network drives.

Version 1.11.1 (2022-06-30)
===========================

General
-------

* New sample plugin: "DelayedDeletion" that will delete files from disk
  asynchronously to speed up deletion of large studies.
* Lua: new "SetHttpTimeout" function
* Lua: new "OnHeartBeat" callback called at regular interval provided that
       you have configured "LuaHeartBeatPeriod" > 0.
* "ExtraMainDicomTags" configuration now accepts Dicom Sequences.  Sequences are
  stored in a dedicated new metadata "MainDicomSequences".  This should improve
  DicomWeb QIDO-RS and avoid warnings like "Accessing Dicom tags from storage when 
  accessing series : 0040,0275".
  Main dicom sequences can now be returned in "MainDicomTags" and in "RequestedTags".

Bug Fixes
---------

* Fix the storage cache that was not used by the Plugin SDK.  This fixes the 
  DicomWeb plugin "/rendered" route performance issues.

Maintenance
-----------

* Housekeeper plugin: Fix resume of previous processing
* Added missing MOVEPatientRootQueryRetrieveInformationModel in 
  DicomControlUserConnection::SetupPresentationContexts()
* Improved HttpClient error logging (add method + url)

REST API
--------

* API version upgraded to 18
* /system is now reporting "DatabaseServerIdentifier"
* Added an Asynchronous mode to /modalities/../move.
* "RequestedTags" option can now include DICOM sequences.

Plugins
-------

* New function in the SDK: "OrthancPluginGetDatabaseServerIdentifier"

OrthancFramework (C++)
----------------------
